Add Map нужно пофиксить верстку

--- a/Views/Game/Town.cshtml
+++ b/Views/Game/Town.cshtml
@@ -29,6 +29,9 @@
                     </a>
                 </div>
             }
+            <a a asp-controller="Game"
+               asp-action="go" 
+               asp-route-id="0" >Выйти из города</a>
         </div>
     </div>
 </div>
