--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,11 @@
                 Town
             </a>
         </li>
-        
+        <li class="nav-item" style=" alignment: center">
+            <a class="nav-link text-dark" asp-controller="Home" asp-action="RecordList" title="Record List">
+                Top List
+            </a>
+        </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-controller="Account" asp-action="Profile" title="Manage">
                 @TempData["Nickname"]
@@ -34,6 +38,11 @@
     {
         <li class="nav-item">
             <a class="nav-link text-dark" href="/Account/Register">Register</a>
+        </li>
+        <li class="nav-item" style=" alignment: center">
+            <a class="nav-link text-dark" asp-controller="Home" asp-action="RecordList" title="Record List">
+                Top List
+            </a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" href="/Account/Login">Login</a>
