Adventure system implemented

--- a/Views/Debug/Index.cshtml
+++ b/Views/Debug/Index.cshtml
@@ -4,5 +4,6 @@
 <div class="btn-group">
     <a class="btn btn-success" asp-action="Add1MGold" asp-route-returnUrl="@Url.Action("Index")">Add 1M Gold</a>
     <a class="btn btn-danger" asp-action="LoseGold" asp-route-returnUrl="@Url.Action("Index")">Set 0 Gold</a>
-    <a class="btn btn-success" asp-action="FightMob" asp-route-returnUrl="@Url.Action("Index")">Fight Mob</a>
+    <br>
+    <a class="btn btn-success" asp-action="Adventure" asp-route-returnUrl="@Url.Action("Index")">Adventure</a>
 </div>
