Add Adventure Mode in frontend

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,12 @@
             <a class="nav-link text-dark" asp-controller="Game" asp-action="Beastiary" title="Beastiary">
                 Beastiary
             </a>
-        </li>   
+        </li> 
+        <li class="nav-item" style=" alignment: center">
+            <a class="nav-link text-dark" asp-controller="Game" asp-action="Adventure" title="Adventure">
+                Adventure
+            </a>
+        </li>
         <li class="nav-item" style=" alignment: center">
             <a class="nav-link text-dark" asp-controller="Game" asp-action="go" title="Town">
                 Town
