Fix buton after entering an adventure

--- a/Views/Game/Adventure.cshtml
+++ b/Views/Game/Adventure.cshtml
@@ -25,6 +25,7 @@
                     $("a").css('cursor', "default").click(function() {
                         return false;
                     });
+                    $(this).attr("disabled", "true");
                     window.location.href = $(this).attr('href');
                 });
             }
