--- a/Views/Game/Adventure.cshtml
+++ b/Views/Game/Adventure.cshtml
@@ -7,49 +7,91 @@
 <div class="text-center">
     <img src="/img/forest.jpg" style="height: 350px; margin-bottom: 5px;" class="img-fluid"/>
     <p>
-    @if (TempData["InProcess"].Equals(false))
-    {
-        <a class="btn btn-success" id="go-adventure" 
-           href="@Url.Action("Adventure", new
-                 {
-                     finished = false
-                 })" disabled>
-            В приключение
-        </a>
-        <script type="text/javascript" defer>
-            window.onload = function() {
-                $("#go-adventure").removeAttr('disabled');
-                $("#go-adventure").one("click", function(e) {
-                    //e.preventDefault();
-                    $(this).removeClass("btn-success").addClass("btn-light").text("И тут всё заверте...");
-                    $(this).attr("disabled", "true");
-                    $("a").css('cursor', "default").click(function() {
-                        return false;
-                    });
-                    
-                    //window.location.href = $(this).attr('href');
-                });
-            }
-        </script>
-    }
-    else
-    {
-        if (TempData["Finished"].Equals(false))
+        @if (TempData["InProcess"].Equals(false))
         {
-            <h4>И тут всё заверте...</h4>
-            
+            <a class="btn btn-success" id="go-adventure" 
+               href="@Url.Action("Adventure", new
+                     {
+                         finished = false
+                     })" disabled>
+                В приключение
+            </a>
+            <script type="text/javascript" defer>
+                window.onload = function() {
+                    $("#go-adventure").removeAttr('disabled');
+                    $("#go-adventure").one("click", function(e) {
+                        //e.preventDefault();
+                        $(this).removeClass("btn-success").addClass("btn-light").text("И тут всё заверте...");
+                        $(this).attr("disabled", "true");
+                        $("a").css('cursor', "default").click(function() {
+                            return false;
+                        });
+                    
+                        //window.location.href = $(this).attr('href');
+                    });
+                }
+            </script>
         }
         else
         {
-            var ccontext = new CultivatorContext();
-            var cult = await ccontext.GetCultivator(User.Identity.Name);
-
-            var story = cult.Event.LastEventStory;
+            if (TempData["Finished"].Equals(false))
+            {
+                <h4>И тут всё заверте...</h4>
             
-            <p>
-                @story
-            </p>
-    }
-    }
+            }
+            else
+            {
+                var ccontext = new CultivatorContext();
+                var cult = await ccontext.GetCultivator(User.Identity.Name);
+
+                var story = cult.Event.LastEventStory;
+            
+                <p>
+                    @story
+                </p>
+            }
+        }
     </p>
 </div>
+
+@{
+    var ccontextAfter = new CultivatorContext();
+    var cultAfter = await ccontextAfter.GetCultivator(User.Identity.Name);
+
+    if (cultAfter.Event.Monster != null)
+    {
+        <div class="row">
+            <div class="col">
+                <h2>@cultAfter.Name</h2>
+                <img src="@cultAfter.HeroType">
+                <br>
+                Strength: @cultAfter.RealStats().MainStats.Strength
+                <br>
+                Agility: @cultAfter.RealStats().MainStats.Agility
+                <br>
+                Intelligence: @cultAfter.RealStats().MainStats.Intelligence
+                <br>
+                Endurance: @cultAfter.RealStats().MainStats.Endurance
+            </div>
+            <div class="col" style="padding-left: 250px">
+                <h2>@cultAfter.Event.Monster.Name</h2>
+                <img src="@cultAfter.Event.Monster.Picture">
+                <br>
+                Strength: @cultAfter.Event.Monster.Strength
+                <br>
+                Agility: @cultAfter.Event.Monster.Agility
+                <br>
+                Intelligence: @cultAfter.Event.Monster.Intelligence
+                <br>
+                Endurance: @cultAfter.Event.Monster.Intelligence
+            </div>
+        </div>
+        <div class="row">
+            За бой вы зачем-то:<br> Кританули по тыкве врага @cultAfter.Event.Crits раз.
+            <br>
+            Перенервничали и не стали бить: @cultAfter.Event.TriesHard раза.
+            <br>
+            Внезапно вспомнили о пользе медитации и вылечились: @cultAfter.Event.Heals раз.
+        </div>
+    }
+}
